Lab4.1_irb_out.txt
c:\Users\anne7\rails_projects\sample_app>rails console
Loading development environment (Rails 3.0.6)

irb(main):001:0> User.create(:name=>"Diana Moon", :email=>"dlunna@crescent.com")
=> #<User id: 1, name: "Diana Moon", email: "dlunna@crescent.com", created_at: "2011-05-06 16:42:56"
, updated_at: "2011-05-06 16:42:56">

irb(main):002:0> User.create(:name=>"Fortuna Rivers", :email=>"frivers@fortune.net")
=> #<User id: 2, name: "Fortuna Rivers", email: "frivers@fortune.net", created_at: "2011-05-06 16:44
:17", updated_at: "2011-05-06 16:44:17">

irb(main):003:0> User.create(:name=>"Minera Wise", :email=>"mwise@wiseguy.com")
=> #<User id: 3, name: "Minera Wise", email: "mwise@wiseguy.com", created_at: "2011-05-06 16:45:27",
 updated_at: "2011-05-06 16:45:27">

irb(main):004:0> User.create(:name=>"Janus Gate", email:=>"newbeginnings.com")
SyntaxError: compile error
(irb):4: syntax error, unexpected tSYMBEG, expecting kDO or '{' or '('
User.create(:name=>"Janus Gate", email:=>"newbeginnings.com")
                                       ^
(irb):4: syntax error, unexpected ')', expecting $end
        from (irb):4
        from :0

irb(main):005:0> User.create(:name=>"Janus Gate", :email=>"newbeginnings.com")
=> #<User id: 4, name: "Janus Gate", email: "newbeginnings.com", created_at: "2011-05-06 16:47:42",
updated_at: "2011-05-06 16:47:42">

irb(main):006:0> User.all
=> [#<User id: 1, name: "Diana Moon", email: "dlunna@crescent.com", created_at: "2011-05-06 16:42:56
", updated_at: "2011-05-06 16:42:56">, #<User id: 2, name: "Fortuna Rivers", email: "frivers@fortune
.net", created_at: "2011-05-06 16:44:17", updated_at: "2011-05-06 16:44:17">, #<User id: 3, name: "M
inera Wise", email: "mwise@wiseguy.com", created_at: "2011-05-06 16:45:27", updated_at: "2011-05-06
16:45:27">, #<User id: 4, name: "Janus Gate", email: "newbeginnings.com", created_at: "2011-05-06 16
:47:42", updated_at: "2011-05-06 16:47:42">]

irb(main):007:0>